Size configuration option

--- a/index.html
+++ b/index.html
@@ -53,17 +53,17 @@
         <h3>Configure</h3>
         <form class="uk-form-horizontal uk-margin-small">
           <div class="uk-margin-small">
-            <label class="uk-form-label" for="terms">Topics</label>
+            <label class="uk-form-label" for="terms">Tags</label>
             <div class="uk-form-controls">
               <input id="terms" class="uk-input" type="text" placeholder="hd, dark">
             </div>
           </div>
           <div class="uk-margin-small">
-            <label class="uk-form-label" for="form-stacked-select">Select</label>
+            <label class="uk-form-label" for="wpsize">Size</label>
             <div class="uk-form-controls">
-                <select class="uk-select" id="form-stacked-select">
+                <select class="uk-select" id="wpsize">
                   <option value="1280x720">1280 x 720 (HD)</option>
-                  <option value="1920x1080" selected>1920 x 1080 (Full HD)</option>
+                  <option value="1920x1080">1920 x 1080 (Full HD)</option>
                   <option value="2048x1080">2048 x 1080 (2K)</option>
                   <option value="4096x2160">4096 x 2160 (4K)</option>
                 </select>
